# tableau_genie

./: README.md  placeholder  pyproject.toml
tableau_workbook_editor/: __init__.py  cli.py
tableau_workbook_editor/core/: actions.py  calc_utils.py  dashboards.py  datasources.py  devices.py  diffs.py  formatting.py  hyper_utils.py  layouts.py  parameters.py  reader.py  twb_model.py  twbx_utils.py  validators.py  versioning.py  worksheets.py  writer.py  xml_utils.py
tableau_workbook_editor/examples/: modify_dashboard.py
tableau_workbook_editor/tests/: test_actions.py  test_calc_fields.py  test_datasource_ops.py  test_devices.py  test_diffs.py  test_layouts.py  test_parameters.py  test_roundtrip.py
tableau_workbook_editor/tests/fixtures/: sample_workbook.twb
