[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tableau_workbook_editor"
version = "0.1.0"
description = "Lightweight Tableau workbook editing toolkit"
readme = "README.md"
authors = [{name = "OpenAI", email = "noreply@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "lxml",
    "defusedxml",
    "xmltodict",
    "tabulate",
    "rich",
    "click",
    "tomli",
    "jsonschema",
    "packaging",
]

[project.optional-dependencies]
hyper = ["tableauhyperapi"]

[project.scripts]
tbe = "tableau_workbook_editor.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
